# foobar-loafer

./: pyproject.toml
foobar/: handlers.py  main.py  routes.py
